--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ aside {
 }
 .user_menu section:not(:last-child) {
   border-bottom: 1px solid #dbdbdb;
+  margin: 0px 0px 3px 0px;
 }
 
 .user_menu_top {
@@ -317,10 +318,10 @@ aside {
 }
 main {
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin: auto auto;
-  width: 800px;
+  margin: 0px auto;
+  width: 100vw;
+  height: 100vh;
 }
 .main_container {
   display: flex;
@@ -328,7 +329,7 @@ main {
   align-items: center;
   gap: 20px;
   margin: 32px auto;
-  width: 100%;
+  width: 800px;
 }
 .info_container {
   position: relative;
@@ -386,6 +387,7 @@ main {
   background-color: #ffffff;
   padding: 12px 12px;
   border-radius: 18px;
+  transition: all 0.3s ease-in-out;
 }
 
 .setup_desc {
@@ -456,9 +458,11 @@ progress::-webkit-progress-bar {
   background-color: #e3e3e3;
   border-radius: 20px;
   overflow: hidden;
+  transition: all 0.4s ease-in-out;
 }
 progress::-webkit-progress-value {
   background-color: #1a1a1a;
+  transition: all 0.4s ease-in-out;
 }
 
 .accordion {
@@ -663,7 +667,6 @@ progress::-webkit-progress-value {
     display: none;
   }
   aside {
-    /* left: 16px; */
     max-width: 80%;
   }
   main {
